# axum-examples-v0.8.3

./: .gitignore
1-01_hello-world/: Cargo.toml
1-01_hello-world/src/: main.rs
1-02_handle-head-request/: Cargo.toml
1-02_handle-head-request/src/: main.rs
1-03_routes-and-handlers-close-together/: Cargo.toml
1-03_routes-and-handlers-close-together/src/: main.rs
1-04_form/: Cargo.toml
1-04_form/src/: main.rs
1-05_readme/: Cargo.toml
1-05_readme/src/: main.rs
2-01_error-handling/: Cargo.toml
2-01_error-handling/src/: main.rs
2-02_anyhow-error-response/: Cargo.toml
2-02_anyhow-error-response/src/: main.rs
2-03_customize-extractor-error/: Cargo.toml  README.md
2-03_customize-extractor-error/src/: custom_extractor.rs  derive_from_request.rs  main.rs  with_rejection.rs
2-03_customize-extractor-error/src/extractors/: custom_extractor.rs  derive_from_request.rs  mod.rs  with_rejection.rs
2-04_customize-path-rejection/: Cargo.toml
2-04_customize-path-rejection/src/: main.rs
2-05_global-404-handler/: Cargo.toml
2-05_global-404-handler/src/: main.rs
2-06_print-request-response/: Cargo.toml
2-06_print-request-response/src/: main.rs
2-07_cors/: Cargo.toml
2-07_cors/src/: main.rs
2-08_dependency-injection/: Cargo.toml
2-08_dependency-injection/src/: main.rs
2-09_parse-body-based-on-content-type/: Cargo.toml
2-09_parse-body-based-on-content-type/src/: main.rs
2-10_graceful-shutdown/: Cargo.toml
2-10_graceful-shutdown/src/: main.rs
2-11_versioning/: Cargo.toml
2-11_versioning/src/: main.rs
3-01_multipart-form/: Cargo.toml
3-01_multipart-form/src/: main.rs
3-02_key-value-store/: Cargo.toml
3-02_key-value-store/src/: main.rs
3-03_mongodb/: Cargo.toml
3-03_mongodb/src/: main.rs
3-04_diesel-postgres/: .env  Cargo.toml
3-04_diesel-postgres/src/: main.rs
3-05_diesel-async-postgres/: Cargo.toml
3-05_diesel-async-postgres/migrations/2023-03-14-180127_add_users/: down.sql  up.sql
3-05_diesel-async-postgres/src/: main.rs
3-06_tokio-postgres/: Cargo.toml
3-06_tokio-postgres/src/: main.rs
3-07_sqlx-postgres/: Cargo.toml
3-07_sqlx-postgres/src/: main.rs
3-08_stream-to-file/: Cargo.toml
3-08_stream-to-file/src/: main.rs
3-09_todos/: Cargo.toml
3-09_todos/src/: main.rs
3-10_validator/: Cargo.toml
3-10_validator/src/: main.rs
4-00_reqwest-response/src/: main.rs
4-01_jwt/: Cargo.toml
4-01_jwt/src/: main.rs
4-02_oauth/: Cargo.toml
4-02_oauth/src/: main.rs
5-01_compression/: Cargo.toml  README.md
5-01_compression/src/: main.rs  tests.rs
5-02_consume-body-in-extractor-or-middleware/: Cargo.toml
5-02_consume-body-in-extractor-or-middleware/src/: main.rs
5-03_http-proxy/: Cargo.toml
5-03_http-proxy/src/: main.rs
5-04_reverse-proxy/: Cargo.toml
5-04_reverse-proxy/src/: main.rs
5-05_serve-with-hyper/: Cargo.toml
5-05_serve-with-hyper/src/: main.rs
5-06_unix-domain-socket/: Cargo.toml
5-06_unix-domain-socket/src/: main.rs
5-07_low-level-native-tls/: Cargo.toml
5-07_low-level-native-tls/src/: main.rs
5-08_low-level-openssl/: Cargo.toml
5-08_low-level-openssl/src/: main.rs
5-09_low-level-rustls/: Cargo.toml
5-09_low-level-rustls/src/: main.rs
5-10_tls-graceful-shutdown/: Cargo.toml
5-10_tls-graceful-shutdown/src/: main.rs
5-11_tls-rustls/: Cargo.toml
5-11_tls-rustls/src/: main.rs
5-12_request-id/: Cargo.toml
5-12_request-id/src/: main.rs
5-13_prometheus-metrics/: Cargo.toml
5-13_prometheus-metrics/src/: main.rs
5-14_tracing-aka-logging/: Cargo.toml
5-14_tracing-aka-logging/src/: main.rs
5-15_auto-reload/: Cargo.toml  README.md
5-15_auto-reload/src/: main.rs
6-01_chat/: Cargo.toml  chat.html
6-01_chat/src/: main.rs
6-02_sse/: Cargo.toml
6-02_sse/src/: main.rs
6-03_websockets/: Cargo.toml
6-03_websockets/assets/: script.js
6-03_websockets/src/: client.rs  main.rs
6-04_websockets-http2/: Cargo.toml
6-04_websockets-http2/assets/: index.html  script.js
6-04_websockets-http2/src/: main.rs
6-05_testing-websockets/: Cargo.toml
6-05_testing-websockets/src/: main.rs
7-01_templates/: Cargo.toml
7-01_templates/src/: main.rs
7-02_templates-minijinja/: Cargo.toml
7-02_templates-minijinja/src/: main.rs
7-02_templates-minijinja/templates/: about.jinja  content.jinja  home.jinja  layout.jinja
7-03_simple-router-wasm/: Cargo.toml
7-03_simple-router-wasm/src/: main.rs
8-01_testing/: Cargo.toml
8-01_testing/src/: main.rs
8-02_query-params-with-empty-strings/: Cargo.toml
8-02_query-params-with-empty-strings/src/: main.rs
8-03_readme/: Cargo.toml
8-04_reqwest-response/: Cargo.toml
9-01_static-file-server/: Cargo.toml
9-01_static-file-server/src/: main.rs
9-02_tokio-redis/: Cargo.toml  dump.rdb
9-02_tokio-redis/src/: main.rs
tokio-redis/: Cargo.toml
