# 패키지 메타데이터 설정
[package]
name = "example-hello-world" # 패키지 이름
version = "0.1.0"            # 패키지 버전
edition = "2021"             # 러스트 에디션(버전) 설정
publish = false              # crates.io에 패키지를 배포하지 않음

# 패키지 의존성 설정
[dependencies]
axum = "0.8.3"                                   # 웹 서버 프레임워크 Axum 사용
tokio = { version = "1.0", features = ["full"] } # 비동기 런타임 Tokio 사용 (전체 기능 활성화)
