# 패키지 메타데이터 설정
[package]
name = "example-handle-head-request" # 패키지 이름
version = "0.1.0"                    # 패키지 버전
edition = "2021"                     # 러스트 에디션(버전) 설정
publish = false                      # crates.io에 패키지를 배포하지 않음

# 런타임 의존성 설정
[dependencies]
# 웹 서버 프레임워크 Axum 사용
axum = "0.8.3"
# 비동기 런타임 Tokio 사용 (전체 기능 활성화)
tokio = { version = "1.0", features = ["full"] }

# 개발용 의존성 설정 (테스트나 개발 환경에서만 사용)
[dev-dependencies]
# HTTP 요청/응답 바디(body) 처리를 도와주는 유틸리티 라이브러리
http-body-util = "0.1.0"
# 고성능 HTTP 구현 라이브러리 Hyper 사용 (전체 기능 활성화)
hyper = { version = "1.0.0", features = ["full"] }
# 서비스 추상화 및 미들웨어 처리를 위한 Tower 라이브러리 (util 기능 활성화)
tower = { version = "0.5.2", features = ["util"] }
