# 패키지 메타데이터 설정
[package]
name = "example-form" # 패키지 이름
version = "0.1.0"     # 패키지 버전
edition = "2021"      # Rust 2021 에디션 사용
publish = false       # crates.io에 패키지를 배포하지 않음

# 런타임 의존성 설정
[dependencies]
# 웹 서버 프레임워크 Axum
axum = "0.8.3"
# 직렬화/역직렬화를 위한 Serde (구조체 자동 파생)
serde = { version = "1.0", features = ["derive"] }
# 비동기 런타임 Tokio (전체 기능 활성화)
tokio = { version = "1.0", features = ["full"] }
# 구조화된 로깅 및 트레이싱을 위한 라이브러리
tracing = "0.1"
# Tracing 로그 구독 및 필터링 기능 제공 (환경 변수나 코드로 로그 레벨을 동적으로 제어)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 개발용 의존성 설정 (테스트 및 개발 환경 전용)
[dev-dependencies]
http-body-util = "0.1.3" # HTTP 요청/응답 바디 조작 유틸리티
mime = "0.3.17"          # MIME 타입 처리를 위한 라이브러리
tower = "0.5.2"          # 서비스 추상화 및 미들웨어 관리를 위한 라이브러리
