[package]
name = "example-error-handling" # 패키지 이름
version = "0.1.0"               # 패키지 버전
edition = "2021"                # Rust 2021 에디션 사용
publish = false                 # crates.io(공식 저장소)로 게시하지 않음

[dependencies]
axum = { version = "0.8.3", features = ["macros"] } # 웹 서버 프레임워크 (라우트 매크로 사용 가능)
serde = { version = "1.0", features = ["derive"] } # JSON 직렬화/역직렬화를 위한 라이브러리
tokio = { version = "1.0", features = ["full"] } # 비동기 런타임 (풀 기능 활성화)
tower-http = { version = "0.6.1", features = [
    "trace",
] } # HTTP 미들웨어 (로깅, 트레이싱 지원)
tracing = "0.1" # 구조화된 로깅/트레이싱 라이브러리
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] } # 트레이싱 설정 및 필터링
