# 패키지 정보
[package]
name = "example-customize-extractor-error" # 패키지 이름
version = "0.1.0"                          # 패키지 버전
edition = "2021"                           # Rust 에디션 (2021 에디션 사용)
publish = false                            # 이 패키지를 crates.io에 배포하지 않음

# 의존성 목록
[dependencies]

# 비동기 웹 프레임워크 axum (매크로 기능 활성화)
axum = { version = "0.8.3", features = ["macros"] }

# axum 추가 기능 모듈들
axum-extra = "0.10.1"

# 직렬화/역직렬화를 위한 serde (derive 매크로 사용)
serde = { version = "1.0", features = ["derive"] }

# JSON 포맷 처리를 위한 serde_json
serde_json = "1.0"

# 에러 타입 정의를 쉽게 해주는 thiserror
thiserror = "1.0"

# 비동기 런타임 tokio (full 기능 세트 사용)
tokio = { version = "1.20", features = ["full"] }

# 구조화된 로깅을 위한 tracing
tracing = "0.1"

# tracing을 위한 로그 subscriber (환경 변수 기반 필터링 지원)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
