[package]
name = "example-global-404-handler" # 패키지 이름
version = "0.1.0"                   # 패키지 버전
edition = "2021"                    # Rust 에디션 (버전 2021 사용)
publish = false                     # crates.io에 배포하지 않음

[dependencies]
# 웹 서버 프레임워크 Axum
axum = "0.8.3"

# 비동기 런타임 Tokio (전체 기능 활성화)
tokio = { version = "1.0", features = ["full"] }

# 애플리케이션 로깅 및 트레이싱 라이브러리
tracing = "0.1"

# Tracing을 위한 구독자 및 환경 변수 기반 필터 설정
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
