[package]
name = "example-tokio-redis"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.3"                                                      # 웹 서버 프레임워크
bb8 = "0.8.5"                                                       # 비동기 커넥션 풀
bb8-redis = "0.17.0"                                                # Redis 용 bb8 커넥션 매니저
redis = "0.27.2"                                                    # Redis 클라이언트
tokio = { version = "1.0", features = ["full"] }                    # 비동기 런타임
tracing = "0.1"                                                     # 로깅
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # 로깅 설정
